PollCmd: Some WIP